# instrument-sdk

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
{{cookiecutter.project_name}}/cmake/bootstrap/: README.md  bootstrap-vcpkg.cmake
{{cookiecutter.project_name}}/isa/: {{cookiecutter.instrument_name}}.yml.tmpl
{{cookiecutter.project_name}}/plugin/: plugin.c
{{cookiecutter.project_name}}/ports/instrument-data/: portfile.cmake  vcpkg.json
{{cookiecutter.project_name}}/ports/instrument-plugin-api/: portfile.cmake  vcpkg.json
{{cookiecutter.project_name}}/ports/isa-test-utils/: portfile.cmake  vcpkg.json
{{cookiecutter.project_name}}/tests/: test-instrument.c
{{cookiecutter.project_name}}/tests/config/: my-{{cookiecutter.instrument_name}}.yml.in
